--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
+    <style>
+        p {
+            color: rosybrown;
+            border: 1px solid forestgreen
+        }
+    </style>
 </head>
 
 <body>
