--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <style>
         p {
             color: rosybrown;
-            border: 1px solid forestgreen
+            border: 1px solid forestgreen;
+            display: block;
         }
     </style>
 </head>
